--- a/t/404.html
+++ b/t/404.html
@@ -10,14 +10,9 @@
 		outline: none;
 	}
 
-  button {
-    border-radius: -30px;
-  }
-
 	* {
 		font-family: 'Barlow Semi Condensed', sans-serif;
 	}
 </style>
-<h1>Shorten a link</h1>
-<input id = 'l'> </input>
-<button onclick = "window.location.href = '/new/'+document.getElementById('l').value.replace('https://', '').replace('/', '_')">Shorten</input>
+<h1>Invalid Request</h1>
+<a href='/'>Shorten a Link</a>
