--- a/t/404.html
+++ b/t/404.html
@@ -1,17 +1,17 @@
 <style>
-	@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 	body {
 		text-align: center;
 	}
 
 	input {
-		border-radius: 30px;
 		border: 2px solid black;
 		outline: none;
 	}
 
-	* {
-		font-family: 'Barlow Semi Condensed', sans-serif;
+	* {font-family: 'Gowun Dodum', sans-serif;
+    color: white;
+    background-color: black;
 	}
 </style>
 <h1>Invalid Request</h1>
