--- a/t/render.html
+++ b/t/render.html
@@ -1,21 +1,24 @@
 <style>
-	@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 	body {
 		text-align: center;
 	}
 
 	input {
-		border-radius: 30px;
-		border: 2px solid black;
+		border: 2px solid white;
 		outline: none;
 	}
 
   button {
     border-radius: -30px;
+    outline: none;
+    border: 2px solid white;
   }
 
 	* {
-		font-family: 'Barlow Semi Condensed', sans-serif;
+    color: white;
+    background-color: black;
+    font-family: 'Gowun Dodum', sans-serif;
 	}
 </style>
 <h1>Shorten a link</h1>
