--- a/t/success.html
+++ b/t/success.html
@@ -1,5 +1,5 @@
 <style>
-	@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 	body {
 		text-align: center;
 	}
@@ -11,8 +11,25 @@
 	}
 
 	* {
-		font-family: 'Barlow Semi Condensed', sans-serif;
+    color: white;
+    background-color: black;
+    font-family: 'Gowun Dodum', sans-serif;
 	}
+  
+  a {
+    color: blue;
+    text-decoration: none;
+    transition: 2s ease-in-and-out;
+  }
+
+  a:hover {
+    text-decoration-color: blue;
+    text-decoration: underline; 
+  }
+
+  input {
+    font-weight: bolder;
+  }
 </style>
 <h1>The shortened link is <a href="{{ url }}">{{ url }}</a></h1>
-<a href='/'>Shorten Another</a>
+<h1><a href='/'>Shorten Another</a></h1>
