--- a/t/redir.html
+++ b/t/redir.html
@@ -1,5 +1,5 @@
 <link rel='shortcut icon' href = "https://irisor.cf/i/2/cart.jpg"/>
-<h1 id = "haha">{{ lol }}</h1>
+<h1 id = "haha" style="display: none; cursor: default;">{{ lol }}</h1>
 <script>
   let hark = document.createElement("a");
   hark.href = document.getElementById("haha").innerText;
